# GMBE

./: .gitignore  .gitmodules  README.md
baselines/: README.md
baselines/MBE/: test_script.sh
datasets/: MovieLens.adj  MovieLens.graph
fig/: genfig.sh  zplot_config.py
fig/fig-10/: Makefile  fig-10.py
fig/fig-11/: fig-11.py
fig/fig-12/: README.md  fig-12.py
fig/fig-13/BookCrossing/: fig-13a.py
fig/fig-13/Github/: fig-13b.py
fig/fig-6/: fig-6.py  overall.data
fig/fig-7/: exp-memory.xlsx  fig-7.data  fig-7.py
fig/fig-8/: fig-8.py  optimization.data
fig/fig-9/BookCrossing/: Makefile  fig-9b.py
fig/fig-9/EuAll/: fig-9a.py
preprocess/: adj_to_graph.cpp  data_convert.cpp  prepare_dataset.sh
scripts/: README.md  compile-GMBE.sh  compile-baselines.sh  gen-fig-10.sh  gen-fig-11.sh  gen-fig-12.sh  gen-fig-13.sh  gen-fig-6.sh  gen-fig-7.sh  gen-fig-8.sh  gen-fig-9.sh  gen-table-2.sh
src/: BiGraph.cu  BiGraph.h  BicliqueFinder.cu  BicliqueFinder.h  CMakeLists.txt  GpuUtil.cuh  IterFinderGpu.cu  IterFinderGpu.h  Makefile  Utility.cu  Utility.h  WorkList.cuh  main.cu
